--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
          uses: aws-actions/amazon-ecs-render-task-definition@v1
          with:
           task-definition: demo-task.json
-          container-name: demo-continer
+          container-name: demo-contaiber
           image: demo-image
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
