--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,17 +71,17 @@ jobs:
          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-      -  name: Fill in the new image ID in the Amazon ECS task definition
-         id: task-def
-         uses: aws-actions/amazon-ecs-render-task-definition@v1
-         with:
-          task-definition: demo-task.json
-          container-name: demo-contaiber
-          image: demo-image
+      - name: Fill in the new image ID in the Amazon ECS task definition
+        id: task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+         task-definition: first-run-task-definition.json
+         container-name: tomcat-webserver
+         image: tomcat
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: demo-service
-          cluster: demo-cluster
+          service: tomcat-webserver-service
+          cluster: demoapp1
           wait-for-service-stability: true
