--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,8 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
-         ECR_REGISTRY: public.ecr.aws/k6l1v7a8
-         ECR_REPOSITORY: demoappsecs
+         ECR_REGISTRY: k6l1v7a8
+         ECR_REPOSITORY: demo
          IMAGE_TAG: ${{ github.sha }}
         run: |
          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
