--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,3 +86,7 @@ jobs:
           service: tomcat-webserver-service
           cluster: demoapp1
           wait-for-service-stability: true
+      - name: ZAP Scan
+        uses: zaproxy/action-baseline@v0.3.0
+        with:
+          target: 'http://3.87.25.214:8080/LoginWebApp-1/'
