--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,19 @@ jobs:
         uses: github/codeql-action/upload-sarif@v1
         with:
          sarif_file: devskim-results.sarif
+      - name: Depcheck
+        uses: dependency-check/Dependency-Check_Action@main
+        id: Depcheck
+        with:
+          project: 'test'
+          path: '.'
+          format: 'HTML'    
+          others: ''
+      - name: Upload Test results
+        uses: actions/upload-artifact@J2EE
+        with:
+           name: Depcheck report
+           path: ${{github.workspace}}/reports
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -90,3 +103,4 @@ jobs:
         uses: zaproxy/action-baseline@v0.3.0
         with:
           target: 'http://3.87.25.214:8080/LoginWebApp-1/'
+\
