--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
           format: 'HTML'    
           others: ''
       - name: Upload Test results
-        uses: actions/upload-artifact@J2EE
+        uses: actions/upload-artifact@main
         with:
            name: Depcheck report
            path: ${{github.workspace}}/reports
