--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,18 @@ jobs:
         with:
            name: Depcheck report
            path: ${{github.workspace}}/reports
+      - name: Veracode
+        uses: veracode/veracode-uploadandscan-action@master # Run the uploadandscan action. Inputs are described above.
+        with:
+         filepath: 'Internal POC/'
+         vid: '${{ secrets.VERACODE_API_ID }}'
+         vkey: '${{ secrets.VERACODE_API_KEY }}'
+         createsandbox: 'true'
+         sandboxname: 'SANDBOXNAME'
+         scantimeout: 15
+         exclude: '*.js'
+         include: '*.war'
+         criticality: 'VeryHigh'
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
