--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,19 +53,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v1
         with:
          sarif_file: devskim-results.sarif
-      - name: Depcheck
-        uses: dependency-check/Dependency-Check_Action@main
-        id: Depcheck
-        with:
-          project: 'test'
-          path: '.'
-          format: 'HTML'    
-          others: ''
-      - name: Upload Test results
-        uses: actions/upload-artifact@main
-        with:
-           name: Depcheck report
-           path: ${{github.workspace}}/reports
+  
       - name: Veracode
         uses: veracode/veracode-uploadandscan-action@master # Run the uploadandscan action. Inputs are described above.
         with:
@@ -73,7 +61,7 @@ jobs:
          vid: '${{ secrets.VERACODE_API_ID }}'
          vkey: '${{ secrets.VERACODE_API_KEY }}'
          createsandbox: 'true'
-         sandboxname: 'SANDBOXNAME'
+         sandboxname: 'ECSDEPLOYMENT'
          scantimeout: 15
          exclude: '*.js'
          include: '*.war'
