--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: us-west-2
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
@@ -83,7 +83,7 @@ jobs:
         id: build-image
         env:
          ECR_REGISTRY:  ${{ steps.login-ecr.outputs.registry }}
-         ECR_REPOSITORY: demoapp
+         ECR_REPOSITORY: demoecr
          IMAGE_TAG: ${{ github.sha }}
         run: |
          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
@@ -103,7 +103,3 @@ jobs:
           service: tomcat-webserver-service
           cluster: demoapp1
           wait-for-service-stability: true
-      - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.3.0
-        with:
-          target: 'http://3.87.25.214:8080/LoginWebApp-1/'
