--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,12 +89,5 @@ jobs:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: tomcat-webserver-service
           cluster: demoapp1
-      - name: Deploy new docker image
-        uses: kodermax/kubectl-aws-eks@master
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: us-west-2
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_BASE_64_ENCODED }} 
-          KUBE_NAMESPACE: kube-system
-          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.RELEASE_REVISION }}
+          wait-for-service-stability: true
+    
