--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,11 +52,7 @@ jobs:
       - name: Upload Sarif
         uses: github/codeql-action/upload-sarif@v1
         with:
-         sarif_file: devskim-results.sarif   
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Build project with Maven
-        run: mvn clean install
+         sarif_file: devskim-results.sarif
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -90,4 +86,7 @@ jobs:
           service: tomcat-webserver-service
           cluster: demoapp1
           wait-for-service-stability: true
-    
+      - name: ZAP Scan
+        uses: zaproxy/action-baseline@v0.3.0
+        with:
+          target: 'http://3.87.25.214:8080/LoginWebApp-1/'
