--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
         id: build-image
         env:
          ECR_REGISTRY:  ${{ steps.login-ecr.outputs.registry }}
-         ECR_REPOSITORY: demoapp
+         ECR_REPOSITORY: clusterdemo
          IMAGE_TAG: ${{ github.sha }}
         run: |
          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
