--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,10 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
 name: Build and Deploy
 on:
   push:
-    branches: [ main ]
+    branches: [ J2EE ]
   pull_request:
-    branches: [ main ]
+    branches: [ J2EE ]
 jobs:
   build:
     name: Build
@@ -14,14 +12,23 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis1
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
-          distribution: 'adopt'
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Maven packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -31,13 +38,18 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push image
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
           tags: sonamsuragini/app:latest
     
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=sonamsuragini-alt_jenkins-docker
       - name: Trufflehog Actions Scan
         uses: edplato/trufflehog-actions-scan@v0.9k-beta
       - name: DevSkim
@@ -53,6 +65,10 @@ jobs:
         uses: github/codeql-action/upload-sarif@v1
         with:
          sarif_file: devskim-results.sarif
+      - name: Downloading OWASP Dependency Check
+        run: wget https://github.com/jeremylong/DependencyCheck/releases/download/v6.2.2/dependency-check-6.2.2-release.zip
+      - name: Unzipping and installing
+        run: unzip dependency-check-6.2.2-release.zip && ls -l dependency-check/bin/dependency-check.sh -s .
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -65,7 +81,7 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
-         ECR_REGISTRY:  ${{ steps.login-ecr.outputs.registry }}
+         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
          ECR_REPOSITORY: clusterdemo
          IMAGE_TAG: ${{ github.sha }}
         run: |
@@ -79,14 +95,23 @@ jobs:
          task-definition: first-run-task-definition.json
          container-name: tomcat-webserver
          image: ${{ steps.build-image.outputs.image }}
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition:1@v1
-        with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
+      -  name: Amazon ECS "Deploy Task Definition" Action for GitHub Actions
+         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+         with:
+          task-definition: ${{ steps.task-def.outputs.task-definition }} 
           service: tomcat-webserver-service
           cluster: demoapp1
           wait-for-service-stability: true
       - name: ZAP Scan
         uses: zaproxy/action-baseline@v0.3.0
         with:
-          target: 'http://3.87.25.214:8080/LoginWebApp-1/'
+          target: 'http://3.237.101.85:8080/onlinebookstore/index.html'
+      - name: Deploy new docker image kubernetes
+        uses: kodermax/kubectl-aws-eks@master
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-west-2
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_BASE_64_ENCODED }} 
+          KUBE_NAMESPACE: kube-system
+          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.RELEASE_REVISION }}
