--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Cache SonarCloud packages
+      - name: Cache SonarCloud package
         uses: actions/cache@v1
         with:
           path: ~/.sonar/cache
