--- a/pom.xml
+++ b/pom.xml
@@ -71,5 +71,8 @@
             <url>https://jcenter.bintray.com</url>
         </repository>
     </repositories>
-
+ <properties>
+  <sonar.organization>sonamsuragini-alt</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
 </project>
