--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,7 +104,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.3.0
         with:
           target: 'http://54.184.32.145:8080/LoginWebApp-1'
-      - name: Deploy new docker image kubernetes
+      - name: Deploy  docker image kubernetes
         uses: kodermax/kubectl-aws-eks@master
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
