--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,13 +97,13 @@ jobs:
          uses: aws-actions/amazon-ecs-deploy-task-definition@v1
          with:
           task-definition: ${{ steps.task-def.outputs.task-definition }} 
-          service: tomcatservice
+          service: demoservice
           cluster: clusterwest
           wait-for-service-stability: true
       - name: ZAP Scan
         uses: zaproxy/action-baseline@v0.3.0
         with:
-          target: 'http://54.202.24.60:8080/LoginWebApp-1'
+          target: 'http://demoservice.com:8080/LoginWebApp-1'
       - name: Deploy  docker image kubernetes
         uses: kodermax/kubectl-aws-eks@master
         env:
